manifests/Validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: namespace-termination-locker-webhook
webhooks:
  - name: namespace-termination-locker-webhook.example.com
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["DELETE"]
        resources: ["namespaces"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: namespace-termination-locker-webhook
        path: /validate
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5akNDQWJJQ0NRRFVsSSt2YTdudkNqQU5CZ2txaGtpRzl3MEJBUXNGQURBbk1TVXdJd1lEVlFRRERCeHUKWVcxbGMzQmhZMlV0ZEdWeWJXbHVZWFJwYjI0dGJHOWphMlZ5TUI0WERUSXpNRE13TVRFM05UQTFNbG9YRFRJMApNREl5T1RFM05UQTFNbG93SnpFbE1DTUdBMVVFQXd3Y2JtRnRaWE53WVdObExYUmxjbTFwYm1GMGFXOXVMV3h2ClkydGxjakNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNTmFkaEtkTGtqZjExVHUKZjdpVjgxZjhTdTlncERRTkhOcHNRV2tTSU4wOUM1TG9nM1pWS3cwemd2Rmk2eUtvTTZWQ3Q0QjRka2M2Snl4YgpHSFBuWUVXdk5X [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 10
